lab3/Lawn-errs
Lawn.java:10: error: ';' expected
import java.util.Scanner
                        ^
1 error
